# Universal-Earned-Autonomy-Layer

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  AUTONOMY_LADDER.md  ENFORCEMENT.md  MIGRATION_V1_TO_V2.md  PRODUCTION_DEPLOYMENT.md  REVIEW_GUIDE.md  ROADMAP.md  SECURITY_MODEL.md  THREAT_MODEL.md  TRUST_MODEL.md
earned_autonomy/: __init__.py  cli.py  config.py  logging_config.py
earned_autonomy/api/: __init__.py  auth.py  schemas.py  server.py
earned_autonomy/core/: __init__.py  capability.py  capability_store.py  classifier.py  conditions.py  control_plane.py  ledger.py  ledger_sql.py  models.py  ontology.py  policy.py  recommendations.py  trust.py
earned_autonomy/crypto/: __init__.py  canonical.py  signing.py
earned_autonomy/enforcement/: __init__.py  pep.py  sdk.py
earned_autonomy/examples/: agent_sdk_demo.py  sales_rep_demo.py
earned_autonomy/observability/: __init__.py  metrics.py
earned_autonomy/storage/: __init__.py  memory.py  sql.py
examples/: agent_sdk_demo.py  sales_rep_demo.py
policies/: sales_lead_generation.yaml
tests/: conftest.py  helpers.py  test_capability.py  test_capability_backend.py  test_conditions.py  test_core.py  test_enforcement.py  test_ledger_signed.py  test_policy_ceilings.py  test_regression_v1_bugs.py  test_signing.py  test_sql_integration.py  test_trust.py  test_v21_hardening.py  test_v3_distributed.py
