[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earned-autonomy-layer"
version = "3.0.0"
description = "Enforced, signed, statistically-honest control plane for progressive AI-agent autonomy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "MMV Firm" }]
keywords = ["ai-agents", "governance", "authorization", "capability-tokens", "audit"]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pyjwt[crypto]>=2.8",
]
sql = [
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
eal = "earned_autonomy.cli:main"

[tool.setuptools.packages.find]
include = ["earned_autonomy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["sql: integration tests requiring EAL_DATABASE_URL"]

[tool.ruff]
line-length = 110
target-version = "py310"
